# crawl-classic

./: COPYRIGHT  LICENSE  README.md  pyproject.toml
crawl_classic/: crit.py  equipment.py  occupations.py
tests/: test_crawl_classic.py  test_occupations.py
