[tool.poetry]
name = "crawl-classic"
version = "0.1.1"
description = "Random tables for Dungeon Crawl Classics RPG."
license = "OPEN GAME LICENSE Version 1.0a"
authors = ["Seth Woodworth <seth@sethish.com>"]
readme = "README.md"
repository = "https://github.com/sethwoodworth/crawl-classic"
keywords = ["RPG", "OGL"]
include = ["COPYRIGHT"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Topic :: Games/Entertainment :: Role-Playing",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.8"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
